# superpower-clockless

./: README-de.md  README-fr.md  README-ja.md  README-zh.md  README.md  bootstrap.ps1  bootstrap.sh  pyproject.toml
docs/: design.md  prd-v2-direction-a.md  prd-v3-direction-a-doctor.md  prd-v4-direction-a-explain.md  prd-v5-direction-a-core-bootstrap.md  technical-solution-v2-direction-a.md  technical-solution-v3-direction-a-doctor.md  technical-solution-v4-direction-a-explain.md  (+5 more)
site/: index.html
src/superpower_clockless/templates/ai-superpower/: README-dev-zh.md  README-zh.md  README.md  config.toml  pyproject.toml
src/superpower_clockless/templates/ai-superpower/.github/workflows/: deploy.yml
src/superpower_clockless/templates/ai-superpower/db/: projects.csv
src/superpower_clockless/templates/ai-superpower/deploy/: ai-superpower.service  install.sh
src/superpower_clockless/templates/ai-superpower/site/: 404.html  app.js  index.html  style.css
src/superpower_clockless/templates/ai-superpower/site/data/: proposals.csv
src/superpower_clockless/templates/ai-superpower/site/projects/: list.html
src/superpower_clockless/templates/ai-superpower/src/ai_superpower/: __init__.py  backup.py  cli.py  client.py  config.py  mcp_server.py  models.py  replay.py  server.py  storage.py  sync.py  sync_gh_pages.py  tui.py
src/superpower_clockless/templates/ai-superpower/src/ai_superpower/static/: app.js
src/superpower_clockless/templates/ai-superpower/src/ai_superpower/templates/: audit.html  index.html  settings.html
src/superpower_clockless/templates/ai-superpower/src/ai_superpower/templates/projects/: list.html
src/superpower_clockless/templates/ai-superpower/src/ai_superpower/templates/proposals/: list.html
(+75 files in other folders)
