[project]
name = "ai-superpower-starter"
version = "0.1.0"
description = "Starter ai-superpower scaffold bootstrapped by superpower-clockless"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-superpower = "ai_superpower.server:main"
aisp = "ai_superpower.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
